deployment/k8s/base/ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika-ui
  labels:
    app.kubernetes.io/name: tika-ui
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tika-ui
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
      labels:
        app.kubernetes.io/name: tika-ui
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      shareProcessNamespace: false
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 90
              preference:
                matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                  - amd64
            - weight: 10
              preference:
                matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                  - arm64
      containers:
        - name: ui
          image: ghcr.io/saidsef/tika-document-to-text:ui-latest
          imagePullPolicy: Always
          ports:
            - name: http-ui
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 624Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 50m
              memory: 1Gi
              ephemeral-storage: 1Gi
          livenessProbe:
            tcpSocket:
              port: http-ui
            initialDelaySeconds: 8
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              port: http-ui
              path: /healthz
              scheme: "HTTP"
            initialDelaySeconds: 8
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2
            timeoutSeconds: 3
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
              - ALL
          volumeMounts:
            - name: data
              mountPath: "/app/storage"
              subPath: storage
              readOnly: false
      volumes:
        - name: data
          emptyDir:
            sizeLimit: 1Gi
