deployment/k8s/base/server-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: tika-server
  labels:
    app.kubernetes.io/name: tika-server
    app.kubernetes.io/tier: backend
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 60
  selector:
    app.kubernetes.io/name: tika-server
  ports:
  - name: server
    protocol: TCP
    port: 7071
    targetPort: 7071
  - name: metrics
    protocol: TCP
    port: 7072
    targetPort: 7072
