deployment/k8s/base/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ui-deny-backend-egress
  labels:
    app.kubernetes.io/name: tika-ui
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tika-ui
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
       - protocol: TCP
         port: 8080
  egress:
    - to:
       - podSelector:
           matchLabels:
             app.kubernetes.io/name: tika-ui
